--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "@angular/forms": "~5.2.0",
     "angular-font-awesome": "^3.1.2",
     "font-awesome": "^4.7.0",
-    "file-system": "^2.2.2",
     "rxjs": "^5.5.6",
-    "ts-md5": "^1.2.0",
     "zone.js": "^0.8.18",
     "@synerty/peek-util": "^0.6.0"
   },
@@ -37,12 +35,11 @@
     "font-awesome": "^4.7.0",
     "@angular/compiler": "~5.2.0",
     "@angular/compiler-cli": "~5.2.0",
-    "file-system": "^2.2.2",
     "rxjs": "^5.5.6",
-    "ts-md5": "^1.2.0",
     "zone.js": "^0.8.18",
     "ng-packagr": "^2.4.2",
     "typescript": "~2.6.0",
     "@synerty/peek-util": "^0.6.0"
-  }
+  },
+  "dependencies": {}
 }
