--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   },
   "private": false,
   "peerDependencies": {
-    "@angular/platform-browser": "~6.0.0",
-    "@angular/common": "~6.0.0",
-    "@angular/core": "~6.0.0",
-    "@angular/router": "~6.0.0",
-    "@angular/forms": "~6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/router": "^6.0.0",
+    "@angular/forms": "^6.0.0",
     "angular-font-awesome": "^3.1.2",
     "font-awesome": "^4.7.0",
     "rxjs": "^6.2.1",
@@ -26,13 +26,13 @@
     "@synerty/peek-util": "^0.7.0"
   },
   "devDependencies": {
-    "@angular/common": "~6.0.0",
-    "@angular/compiler": "~6.0.0",
-    "@angular/compiler-cli": "~6.0.0",
-    "@angular/core": "~6.0.0",
-    "@angular/forms": "~6.0.0",
-    "@angular/platform-browser": "~6.0.0",
-    "@angular/router": "~6.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/router": "^6.0.0",
     "@synerty/peek-util": "^0.7.1",
     "angular-font-awesome": "^3.1.2",
     "font-awesome": "^4.7.0",
