--- a/package.json
+++ b/package.json
@@ -14,32 +14,33 @@
   },
   "private": false,
   "peerDependencies": {
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/common": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/router": "^6.0.0",
-    "@angular/forms": "^6.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/router": "^8.0.0",
+    "@angular/forms": "^8.0.0",
     "angular-font-awesome": "^3.1.2",
     "font-awesome": "^4.7.0",
-    "rxjs": "^6.2.1",
-    "zone.js": "^0.8.18",
-    "@synerty/peek-util": "^0.7.0"
+    "rxjs": "^6.5.2",
+    "zone.js": "^0.9.1",
+    "typescript": "<3.5",
+    "@synerty/peek-util": "^0.8.0"
   },
   "devDependencies": {
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/router": "^6.0.0",
-    "@synerty/peek-util": "^0.7.1",
-    "angular-font-awesome": "^3.1.2",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/router": "^8.0.0",
     "font-awesome": "^4.7.0",
-    "ng-packagr": "^3.0.0",
-    "rxjs": "^6.2.1",
-    "typescript": "~2.7.2",
-    "zone.js": "^0.8.18"
+    "@synerty/peek-util": "^0.8.0",
+    "angular-font-awesome": "^3.1.2",
+    "ng-packagr": "^5.3.0",
+    "rxjs": "^6.5.2",
+    "typescript": "<3.5",
+    "zone.js": "^0.9.1"
   },
   "dependencies": {}
 }
